fix spacing issues with vertical-align and padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@ img {
 }
 
 .center-text {
-    text-align: center;
+    vertical-align: middle;
+    padding-left: 40%;
 }
 
 .box-model {
@@ -22,4 +23,9 @@ img {
 
 body {
     background-color: lightgrey;
+}
+
+h5 {
+    vertical-align: middle;
+    padding-left: 35%;
 }
